# vasalytics

./: .gitignore  app.py  clean_2022.pkl  clean_2023.pkl  main.py  pyproject.toml  scraping.py
