[tool.poetry]
name = "vasalytics"
version = "0.1.0"
description = "Vasaloppet Analytics"
authors = ["Edvin Lundström <edvin.lundstrom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
beautifulsoup4 = "^4.11.2"
requests-toolbelt = "^0.10.1"
lxml = "^4.9.2"
pandas = "^1.5.3"
aiohttp = "^3.8.4"
streamlit = "^1.19.0"
watchdog = "^2.3.0"
plost = "^0.2.5"
vega-datasets = "^0.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
